<resources>

    <string name="app_name">Money Pal</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Money Pal</string>
    <string name="add_title">Add</string>
    <string name="word">Name :</string>
    <string name="name_text_view">Name :</string>
    <string name="text_hint">Friend\'s Name</string>
    <string name="name_text_field">name_t</string>
    <string name="gender_text_view">Gender :</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="no_item">You havn\'t transact with any Partner till now :O</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="title_activity_partner">Money Pal</string>
    <string name="none"/>
    <string name="item_text_view">Item Name : </string>
    <string name="time_text_view">Time : </string>
    <string name="item_hint">Name, Place, Thing</string>
    <string name="you_gave_text_view">You gave : </string>
    <string name="he_gave_text_view">Partner gave :</string>
    <string name="she_gave_text_view">She gave :</string>
    <string name="date_text_view">Date :</string>
    <string name="button_change">Change</string>
    <string name="imageContent">imageValue</string>
    <string name="testValue">testing purpose</string>
    <string name="phone_text_view">Phone : </string>
    <string name="phone_hint">\',\' separated phone numbers</string>
    <string name="sms_warning">
        WARNING: this demo can send actual text messages (one at a time), so be sure to
        test with the Android emulator or have a text messaging plan with your carrier.
    </string>
    <string name="sms_enable_receiver">Enable SMS broadcast receiver</string>
    <string name="sms_recipient_label">Recipient #</string>
    <string name="sms_content_label">Text to share :</string>
    <string name="share_message">Share</string>
    <string name="sms_send_message">SMS</string>
    <string name="sms_speak_string_format">Message from "%1$s": %2$s</string>
    <string name="reply">Reply</string>
    <string name="dismiss">Dismiss</string>
    
    <string name="small_length">Small</string>
    <string name="medium_length">Medium</string>
    <string name="large_length">Large</string>
    <string name="total_amount_text_view">Amount :</string>
    <string name="split_in">Split in :</string>
    <string name="per_head_amount">Per head :</string>
    <string name="num_checked"># checked :</string>
    <string name="split_the_bill">Split the Bill</string>
    <string name="activity_header_sms">Share</string>
    <string name="empty_main_activity">Hello! Its very easy to use. Add your first partner and start managing your money. Check \'Help\' section for more details. </string>
    <string name="about_message">Stride-In Productions.
        Copyright 2013, All rights reserved.</string>
    <string name="splash_message">Stride-In Productions</string>
    <string name="help">Help</string>
</resources>